--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,26 +1,41 @@
-<h1>Books</h1>
-<div class="book-list">
-  <section class="title-column">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="?">
+    <title>Bookers-index</title>
+  </head>
+  <body>
+    <h1>Books</h1>
+    <table class="book-list">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Body</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @books.each do |book| %>
+        <tr>
+          <td><%= book.title %></td>
+          <td><%= book.body %></td>
+          <td><%= link_to "Show", book_path(book) %></td>
+          <td>編集</td>
+          <td>削除</td>
+        <% end %>
+      </tbody>
+    </table>
+
+
+
+    <h2>New Book</h2>
+    <%= form_with model: @book, local:true do |f| %>
     <h3>Title</h3>
-    <% @books.each do |book| %>
-    <p><%= book.title %></p>
-    <% end %>
-  </section>
-  <section class="body-column">
+    <%= f.text_field :title %>
     <h3>Body</h3>
-    <% @books.each do |book| %>
-    <p><%= book.body %></p>
+    <%= f.text_area :body %><br>
+    <%= f.submit 'Create Book' %>
     <% end %>
-  </section>
-</div>
-
-
-
-<h2>New Book</h2>
-<%= form_with model: @book do |f| %>
-  <h3>Title</h3>
-  <%= f.text_field :title %>
-  <h3>Body</h3>
-  <%= f.text_area :body %><br>
-  <%= f.submit 'Create Book' %>
-<% end %>
+  </body>
+</html>
