--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,18 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="?">
+    <title>Bookers-edit</title>
+  </head>
+  <body>
+    <h2>Editing Book</h2>
+    <%= form_with model: @book, local:true do |f| %>
+    <h3>Title</h3>
+    <%= f.text_field :title %>
+    <h3>Body</h3>
+    <%= f.text_area :body %><br>
+    <%= f.submit 'Update Book' %>
+    <% end %>
+  </body>
+</html>
