booksコントローラー周りの全実装を確認

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -14,5 +14,7 @@
     <%= f.text_area :body %><br>
     <%= f.submit 'Update Book' %>
     <% end %>
+    <%= link_to "Show", book_path(@book) %>
+    <%= link_to "Back", books_path %>
   </body>
 </html>
