--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -22,7 +22,7 @@
           <td><%= book.body %></td>
           <td><%= link_to "Show", book_path(book) %></td>
           <td><%= link_to "Edit", edit_book_path(book) %></td>
-          <td><%= link_to "Delete", book_path(book), method: :delete %></td>
+          <td><%= link_to "Destroy", book_path(book), method: :delete %></td>
         <% end %>
       </tbody>
     </table>
