--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -30,6 +30,18 @@
 
 
     <h2>New Book</h2>
+
+    <% if @book.errors.any? %>
+      <% if @book.errors.count == 1 %>
+        <%= @book.errors.count %> error prohibited this book from being saved:
+      <% else %>
+        <%= @book.errors.count %> errors prohibited this book from being saved:
+      <% end %>
+      <% @book.errors.full_messages.each do |message| %>
+        <br><%= message %>
+      <% end %>
+    <% end %>
+
     <%= form_with model: @book, local:true do |f| %>
     <h3>Title</h3>
     <%= f.text_field :title %>
