７日火曜の作業終了。topの美観作業が完成

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="?">
-    <title>Bookers-start</title>
-  </head>
-  <body>
-    <%= link_to "Start", books_path %>
-  </body>
-</html>
+<body>
+  <h1>
+    ようこそ
+    <strong>Bookers</strong>
+     へ!
+  </h1>
+  <p>
+    <strong>Bookers</strong>
+    では、さまざまな書籍に関するあなたの意見や
+  </p>
+  <p>印象を共有し交換することができます</p>
+  <p><%= link_to "Start", books_path %></p>
+</body>
