チェックした。editに修正箇所あり

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -50,7 +50,7 @@
     </div>
     <div class="field">
     <label for="book_body">Body</label>
-    <%= f.text_area :body %><br>
+    <%= f.text_area :body %>
     </div>
     <div class="actions">
     <%= f.submit 'Create Book' %>
