--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -14,14 +14,21 @@
   <% end %>
 
 
-  <h2>Editing Book</h2>
+  <h1>Editing Book</h1>
   <%= form_with model: @book, local:true do |f| %>
-  <h3>Title</h3>
-  <%= f.text_field :title %>
-  <h3>Body</h3>
-  <%= f.text_area :body %><br>
-  <%= f.submit 'Update Book' %>
+    <div class="field">
+    <label for="book_title">Title</label>
+    <%= f.text_field :title %>
+    </div>
+    <div class="field">
+    <label for="book_body">Body</label>
+    <%= f.text_area :body %>
+    </div>
+    <div class="actions">
+    <%= f.submit 'Update Book' %>
+    </div>
   <% end %>
-  <%= link_to "Show", book_path(@book) %>
+
+  <%= link_to "Show", book_path(@book) %> |
   <%= link_to "Back", books_path %>
 </body>
